# github-trends

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  justfile  setup.cfg  tox.ini
.cache/: 11ty_eleventy.json  AliasIO_wappalyzer.json  Ardour_ardour.json  AudioKit_AudioKit.json  BVLC_caffe.json  BurntSushi_ripgrep.json  CSSLab_maia-chess.json  Canop_broot.json  CarGuo_GSYVideoPlayer.json  CesiumGS_cesium.json  ChatSecure_ChatSecure-iOS.json  ClementTsang_bottom.json  ConradIrwin_showterm.json  DEAP_deap.json  DIYgod_APlayer.json  DIYgod_RSSHub-Radar.json  DmitryBaranovskiy_raphael.json  Dogfalo_materialize.json  DrKLO_Telegram.json  ElemeFE_v-charts.json  Enlightenment_efl.json  Eugeny_tabby.json  FFmpeg_FFmpeg.json  Felienne_hedy.json  FiloSottile_age.json  FormidableLabs_victory.json  FortAwesome_Font-Awesome.json  GNOME_gimp.json  GNOME_gnome-terminal.json  GNOME_gtk.json  GNUAspell_aspell.json  Glavin001_atom-beautify.json  Guake_guake.json  HDFGroup_hdf5.json  HarisIqbal88_PlotNeuralNet.json  Huachao_vscode-restclient.json  HypothesisWorks_hypothesis.json  IBM_plex.json  JabRef_jabref.json  JamesIves_github-pages-deploy-action.json  (+719 more)
.github/workflows/: ci.yml  update.yml
cache/: 11ty_eleventy.json  AliasIO_wappalyzer.json  Ardour_ardour.json  AudioKit_AudioKit.json  BVLC_caffe.json  BurntSushi_ripgrep.json  CSSLab_maia-chess.json  CarGuo_GSYVideoPlayer.json  CesiumGS_cesium.json  ChatSecure_ChatSecure-iOS.json  ClementTsang_bottom.json  ConradIrwin_showterm.json  DEAP_deap.json  DIYgod_APlayer.json  DIYgod_RSSHub-Radar.json  DmitryBaranovskiy_raphael.json  Dogfalo_materialize.json  DrKLO_Telegram.json  ElemeFE_v-charts.json  Enlightenment_efl.json  Eugeny_tabby.json  FFmpeg_FFmpeg.json  FiloSottile_age.json  FormidableLabs_victory.json  GNOME_gimp.json  GNOME_gnome-terminal.json  GNOME_gtk.json  GNUAspell_aspell.json  Glavin001_atom-beautify.json  Guake_guake.json  HDFGroup_hdf5.json  HarisIqbal88_PlotNeuralNet.json  Huachao_vscode-restclient.json  HypothesisWorks_hypothesis.json  IBM_plex.json  JabRef_jabref.json  JetBrains_JetBrainsMono.json  JetBrains_kotlin.json  JuliaLang_julia.json  KDE_kdenlive.json  (+633 more)
data/: groups.json  plot.py  update.py
data/data/: 11ty_eleventy.json  AliasIO_wappalyzer.json  Ardour_ardour.json  AudioKit_AudioKit.json  BVLC_caffe.json  BurntSushi_ripgrep.json  CSSLab_maia-chess.json  CarGuo_GSYVideoPlayer.json  CesiumGS_cesium.json  ClementTsang_bottom.json  ConradIrwin_showterm.json  DEAP_deap.json  DIYgod_APlayer.json  DIYgod_RSSHub-Radar.json  DmitryBaranovskiy_raphael.json  Dogfalo_materialize.json  ElemeFE_v-charts.json  FFmpeg_FFmpeg.json  FiloSottile_age.json  FormidableLabs_victory.json  GNOME_gnome-terminal.json  GNUAspell_aspell.json  Glavin001_atom-beautify.json  Guake_guake.json  HDFGroup_hdf5.json  HarisIqbal88_PlotNeuralNet.json  Huachao_vscode-restclient.json  HypothesisWorks_hypothesis.json  IBM_plex.json  JabRef_jabref.json  JetBrains_JetBrainsMono.json  JetBrains_kotlin.json  JuliaLang_julia.json  KDE_kdenlive.json  KDE_konsole.json  KDE_kwin.json  KDE_yakuake.json  KaTeX_KaTeX.json  Kitware_CMake.json  LMMS_lmms.json  (+541 more)
gh_stars/: __about__.py  __init__.py  cli.py  main.py  tools.py
src/stargraph/: __about__.py  __init__.py  cli.py  main.py  tools.py
stargraph/: __init__.py  cli.py  main.py
test/: test_gh_stars.wqpy
tests/: test_gh_stars.py
tools/: _main.py  check-rename.py  create-readme-plots.py  groups.json  plot.py  update.py
