[metadata]
name = gh-stars
version = 0.1.0
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Best practicses for Python projects
url = https://github.com/nschloe/gh-stars
project_urls =
    Code=https://github.com/nschloe/gh-stars
    Issues=https://github.com/nschloe/gh-stars/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
python_requires = >=3.5
setup_requires =
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
    gh-stars = gh-stars.cli:show
