[metadata]
name = stargraph
version = 0.1.2
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = GitHub stars over time
url = https://github.com/nschloe/stargraph
project_urls =
    Code=https://github.com/nschloe/stargraph
    Issues=https://github.com/nschloe/stargraph/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
packages = find:
install_requires =
    dufte
    importlib_metadata;python_version<"3.8"
    matplotlib
    requests
python_requires = >=3.6

[options.entry_points]
console_scripts =
    stargraph = stargraph.cli:main
