[metadata]
name = stargraph
version = 0.2.0
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = GitHub stars over time
url = https://github.com/nschloe/stargraph
project_urls =
    Code=https://github.com/nschloe/stargraph
    Issues=https://github.com/nschloe/stargraph/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
install_requires =
    appdirs
    matplotlib
    matplotx
    requests
    rich
python_requires = >=3.7

[options.packages.find]
where=src
